@@ -24,5 +24,7 @@ import Data.Yaml
 
 readYamlFile :: FilePath -> IO Node
 readYamlFile f =
-  (maybe (error $ "Could not parse " ++ f) id) `fmap` decodeFile f
+  either (\e -> error ("Could not parse " ++ f ++ ": "
+                         ++ prettyPrintParseException e)) id
+    <$> decodeFileEither f
 
