@@ -55,6 +55,7 @@ Executable           yst
                      Yst.CSV,
                      Yst.Sqlite3,
                      Paths_yst
+  autogen-modules:   Paths_yst
   build-depends:     base >=3 && < 4.15,
                      unordered-containers,
                      HStringTemplate >= 0.6.1 && < 0.6.9 || > 0.6.11 && < 0.9,
@@ -75,6 +76,7 @@ Executable           yst
                      split,
                      HDBC,
                      HDBC-sqlite3
+  default-language:   Haskell2010
   default-extensions:  CPP
   if impl(ghc >= 6.12)
     ghc-options:     -Wall -threaded -fno-warn-orphans -fno-warn-unused-do-bind
