@@ -1,6 +1,7 @@
 yst 0.7.1.1 (released 12 Aug 2021)
 
   * Fixes to work with pandoc 2.14.1.
+  * Give informative error messages on YAML parse failure.
 
 yst 0.7.1 (released 25 Nov 2019)
 
